tests/js/valid/functions/parses/spaces-1.buri
A = Int
a = (hello    :    A)=>0