tests/js/invalid/function/mismatched-types-6.buri
Func = (Int) => Str
func: Func = (a) => a